# android-3D-engine

./: README.md  build.gradle  build.gradle.kts
cpp/: CMakeLists.txt  native-lib.cpp
doc/: README.md
src/fbx/cpp/: fbx_model.h
src/gltf/java/javax/: ImageIO.java
src/main/cpp/: CMakeLists.txt  fbx_model.h  native-adapter.cpp  native-lib.cpp
src/main/java/javax/inject/: Inject.java  (+1 more)
src/main/res/layout/: fragment_model.xml  preference_category.xml
src/main/res/raw/: shader_animated_frag.glsl  shader_animated_frag_v3.glsl  shader_animated_vert.glsl  shader_animated_vert_v3.glsl  shader_basic_frag_v3.glsl  shader_basic_vert.glsl  shader_basic_vert_v3.glsl  shader_f_with_simple_shadow.glsl  shader_skybox_frag.glsl  shader_static_frag_v2.glsl  shader_static_vert_v2.glsl  shader_v2_animated_frag.glsl  shader_v2_animated_vert.glsl  shader_v2_basic_frag.glsl  shader_v2_basic_vert.glsl  shader_v2_shadow_depth_map_frag.glsl  shader_v2_shadow_depth_map_vert.glsl  shader_v2_shadow_frag.glsl  shader_v2_shadow_vert.glsl  shader_v2_skybox_frag.glsl  shader_v2_skybox_vert.glsl  shader_v2_static_frag.glsl  shader_v2_static_vert.glsl  shader_v2_with_shadow_vert.glsl  shader_v3_animated_frag.glsl  shader_v3_animated_vert.glsl  shader_v3_basic_frag.glsl  shader_v3_shadow_depth_map_frag.glsl  shader_v3_skybox_frag.glsl  shader_v3_skybox_vert.glsl  shader_v3_static_frag.glsl  shader_v3_static_vert.glsl  shader_v3_sun_frag.glsl  shader_v3_sun_vert.glsl  shader_v_depth_map.glsl  shader_v_with_shadow.glsl
src/main/res/values/: strings.xml
src/main/res/values-es/: strings.xml
(+730 files in other folders)
